[package]
name = "koval-telegram-bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "koval-telegram-bot"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "rustls"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
wana_kana = { git = "https://github.com/alardev/wana_kana_rust" }
